<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clean"
        android:orderInCategory="100"
        android:title="@string/action_clear"
        app:showAsAction="never" />

    <item
        android:id="@+id/upgrade"
        android:orderInCategory="100"
        android:title="@string/action_upgrade"
        android:icon="@mipmap/icon_upgrade"
        app:showAsAction="never" />
    <item
        android:id="@+id/login"
        android:orderInCategory="100"
        android:title="@string/action_relogin"
        android:icon="@mipmap/icon_login"
        app:showAsAction="never" />

    <item
        android:id="@+id/updatePassword"
        android:orderInCategory="100"
        android:title="@string/action_update_password"
        android:icon="@mipmap/icon_login"
        app:showAsAction="never" />
</menu>
